# flipperone-mcu-firmware

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: one.cpp  phrase.cpp  phrase.h  screensaver.cpp  screensaver.h
app/theme/: lv_theme_one.c  lv_theme_one.h
applications/: app.template  applications.c  applications.h
applications/debug/haptic_test/: haptic_effect_name.h  haptic_test.c
applications/debug/keypad_test/: keypad_test.c
applications/debug/touchpad_test/: touchpad_test.c
applications/main/cpu/: cpu_app.c
applications/main/linux/: linux_app.c
applications/services/: applications.c
applications/services/cli/: cli.c  cli.h  cli_command_gpio.c  cli_commands.c  cli_i.h  cli_uart.c  cli_uart.h  cli_vcp.c
applications/services/desktop/: desktop.c
applications/services/display/: display.c  display.h
applications/services/fusb302/: fusb302.c
applications/services/gui/: clay_helper.c  clay_helper.h  clay_render.c  clay_render.h  gui.c  gui.h  gui_i.h  image.h  view.c  view.h  view_port.c  view_port.h  view_port_i.h
applications/services/gui_test/: app_common.h  clay_render.c  clay_render.h  gui_test.c
applications/services/haptic/: haptic.c  haptic.h
applications/services/i2c_slave_cpu/: i2c_slave_cpu.c  i2c_slave_cpu.h
applications/services/input/: input.c  input.h
applications/services/input_test/: input_test.c
applications/services/input_touch/: input_touch.c  input_touch.h
applications/services/led/: led_backend.c
applications/services/power/: power.c  power.h  power_cli.c
applications/services/power_menu/: power_menu.c
applications/services/status_lights/: status_lights.h  status_lights_backend.c  status_lights_cli.c  status_lights_cli.h  status_lights_notification.c  status_lights_notification.h
applications/services/test/: test.c
applications/services/test_peref/: test_peref.c
applications/services/uart_echo/: uart_echo.c
applications/services/usb/: usb.c
applications/template/: app.c
assets/: CMakeLists.txt
assets/python/: build.cmd  run_venv.sh
assets/scripts/: image_convert.py
docs/: 2.39_mono_86x144_SPI4W_20250401.txt  C_JD9853_BOE2.39_mono_86x144_SPI4W_20250116_lok.txt
lib/drivers/: display.hpp  keys.hpp  log.hpp  pwm.hpp  ws2812_strip.hpp
lib/drivers/I2c_master_pio/: i2c.pio  pio_i2c.c  pio_i2c.h
lib/drivers/bq25792/: bq25792.c  bq25792.h  bq25792_helper.h  bq25792_reg.h
lib/drivers/bq28z620/: bq28z620.c  bq28z620.h  bq28z620_reg.h
lib/drivers/display/: display_jd9853.c  display_jd9853.c.txt  display_jd9853.cX  display_jd9853.h  display_jd9853_qspi.c  display_jd9853_qspi.h  display_jd9853_reg.h  display_jd9853_spi.c  display_jd9853_spi.h
lib/drivers/drv2605l/: drv2605l.c  drv2605l.h  drv2605l_effect.h  drv2605l_reg.h
lib/drivers/fusb302/: fusb302.c  fusb302.h  fusb302_reg.h
lib/freertos/: CMakeLists.txt  FreeRTOSConfig.h  freertos_glue.cpp
lib/furi/: flipper.c  flipper.h  furi.c  furi.h
lib/lvgl/: CMakeLists.txt  lv_conf.h
lib/lvgl/fonts/: lv_font_ark_numerals_condensed_10.c  lv_font_ark_numerals_regular_10.c  lv_font_ark_numerals_small_10.c  lv_font_cubic_12.c  lv_font_somybmp_7.c
lib/tusb/: usb_descriptors.c  whitelabel.json
lib/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
scripts/: get_env.py
targets/f100/: CMakeLists.txt
targets/f110/: CMakeLists.txt
targets/f110/furi_hal/: furi_hal.c  furi_hal_resources_pins.c
(+82 files in other folders)
